# more-reliable-udp

./: .gitignore  CMakeLists.txt  README.md
client-src/: CMakeLists.txt  compile-on-desktop-changes.txt
client-src/include/: Controller.h  Game.h  client-util.h  client.h  setup.h
client-src/libs/include/: error.h  input-validation.h  util.h
client-src/libs/src/: util.c
client-src/src/: Controller.c  Game.c  client-util.c  client.c  main.c  setup.c
libs/include/: error.h  input-validation.h  manager.h  structs.h  util.h
libs/src/: input-validation.c  manager.c  util.c
proxy-src/include/: proxy.h  setup.h
proxy-src/src/: main.c  proxy.c  setup.c
server-src/: CMakeLists.txt
server-src/include/: Game.h  server-util.h  server.h  setup.h
server-src/libs/include/: manager.h
server-src/libs/src/: error.c  input-validation.c  manager.c  util.c
server-src/src/: Game.c  main.c  server-util.c  server.c  setup.c
